--- a/frontEnd/test-3-comment2.html
+++ b/frontEnd/test-3-comment2.html
@@ -4,6 +4,7 @@
     <title>收货评论页面</title>
     <title>JavaScript实现收获评论页面</title>
     <link rel="stylesheet" type="text/css" href="../css/test-3-comment2.css">
+    <link rel="stylesheet" type="text/css" href="../css/common.css">
     <script type="text/javascript" src="./js/test-3-comment2.js"></script>
 </head>
 
@@ -20,7 +21,7 @@
     </thead>
     <tbody>
     <td><img class="imgSize" src="../img/comment/plaidShirt.jpg"></td>
-    <td><a class="foodsInfo" id="foodsInfo" name="foodsInfo" href="http:url">M4526 mimius夏日新款女格子百搭日系百搭修身无袖衬衫</a></td>
+    <td><span class="foodsInfo" id="foodsInfo" name="foodsInfo">M4526 mimius夏日新款女格子百搭日系百搭修身无袖衬衫</span></td>
     </tbody>
 </table>
 
