修复购物车在删除商品而合计的数字不会更新的情况的bug

--- a/frontEnd/test-2-cart3.html
+++ b/frontEnd/test-2-cart3.html
@@ -44,9 +44,9 @@
             </input>
             <span class="add" id="add1" name="add" onClick="addAmount(this),sumPrice(),countAll()">+</span></td>
         <td class="priceTotleNumber"><span id="sumPrice1" name="sumPrice"></span></td>
-        <td class="operation"><span class="delete" id="delete1" onclick="deleteRow(this)">删除</span></td>
+        <td class="operation"><span class="delete" id="delete1" onclick="deleteRow(this),countAll()">删除</span></td>
         <td class="operation"><span class="moveToFavorite" id="moveToFavorite1"
-                                    onclick="moveToFavorite(this)">移至收藏夹</span></td>
+                                    onclick="moveToFavorite(this),countAll()">移至收藏夹</span></td>
     </tr>
     <tr class="order_content">
         <td class="check"><input class="check_one" type="checkbox" id="checkOne2" name="checkOne"
@@ -61,9 +61,9 @@
             </input>
             <span class="add" id="add2" name="add" onClick="addAmount(this),sumPrice(),countAll()">+</span></td>
         <td class="priceTotleNumber"><span id="sumPrice2" name="sumPrice"></span></td>
-        <td class="operation"><span class="delete" id="delete2" onclick="deleteRow(this)">删除</span></td>
+        <td class="operation"><span class="delete" id="delete2" onclick="deleteRow(this),countAll()">删除</span></td>
         <td class="operation"><span class="moveToFavorite" id="moveToFavorite2"
-                                    onclick="moveToFavorite(this)">移至收藏夹</span></td>
+                                    onclick="moveToFavorite(this),countAll()">移至收藏夹</span></td>
     </tr>
     <tr class="order_content">
         <td class="check"><input class="check_one" type="checkbox" id="checkOne3" name="checkOne"
@@ -78,9 +78,9 @@
             </input>
             <span class="add" id="add3" name="add" onClick="addAmount(this),sumPrice(),countAll()">+</span></td>
         <td class="priceTotleNumber"><span id="sumPrice3" name="sumPrice"></span></td>
-        <td class="operation"><span class="delete" id="delete3" onclick="deleteRow(this)">删除</span></td>
+        <td class="operation"><span class="delete" id="delete3" onclick="deleteRow(this),countAll()">删除</span></td>
         <td class="operation"><span class="moveToFavorite" id="moveToFavorite3"
-                                    onclick="moveToFavorite(this)">移至收藏夹</span></td>
+                                    onclick="moveToFavorite(this),countAll()">移至收藏夹</span></td>
     </tr>
     <tr>
         <td class="check"><input class="check_one" type="checkbox" id="checkOne4" name="checkOne"
@@ -95,9 +95,9 @@
             </input>
             <span class="add" id="add4" name="add" onClick="addAmount(this),sumPrice(),countAll()">+</span></td>
         <td class="priceTotleNumber"><span id="sumPrice4" name="sumPrice"></span></td>
-        <td class="operation"><span class="delete" id="delete4" onclick="deleteRow(this)">删除</span></td>
+        <td class="operation"><span class="delete" id="delete4" onclick="deleteRow(this),countAll()">删除</span></td>
         <td class="operation"><span class="moveToFavorite" id="moveToFavorite4"
-                                    onclick="moveToFavorite(this)">移至收藏夹</span></td>
+                                    onclick="moveToFavorite(this),countAll()">移至收藏夹</span></td>
     </tr>
     </tbody>
 </table>
